--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
   <p>Welcome to the chat app<p>
     <dl id="messagelist"></dl>
 
-
     <form id="message-form">
       <input name="message" type="text" placeholder="Message"/>
       <button>Send</button>
     </form>
+    <button id="send-location">Send Location</button>
 
     <script src="socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.2.1.min.js"></script>
