--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
 
 <head>
   <meta charset="utf-8">
+  <title>This is my title</title>
 </head>
 
 <body>
-  <p>Welcome to the chat app<p>
+  <p>Welcome to the chat app</p>
     <dl id="messagelist"></dl>
 
     <form id="message-form">
