--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,30 @@
 
 <head>
   <meta charset="utf-8">
-  <title>This is my title</title>
+  <link rel="stylesheet" href="/css/styles.css">
+  <title>Sedims-Chat-App</title>
 </head>
 
-<body>
-  <p>Welcome to the chat app</p>
-    <dl id="messagelist"></dl>
+<body class="chat">
+    <div class="chat__sidebar">
+      <h3>People</h3>
+      <div id="users"></div>
+    </div>
 
-    <form id="message-form">
-      <input name="message" type="text" placeholder="Message"/>
-      <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+    <div class="chat__main">
+
+      <dl id="messagelist" class="chat__messages"></dl>
+
+      <div class="chat__footer">
+        <form id="message-form">
+          <input name="message" type="text" placeholder="Enter Message here" autofocus autocomplete="off" />
+          <button>Send</button>
+        </form>
+        <button id="send-location">Send location</button>
+      </div>
+    </div>
+
+
 
     <script src="socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.2.1.min.js"></script>
