--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,36 @@
   </div>
 
 
+  <script id="messagelist-template" type="text/template">
+    <dd class="messages">
+      <div class="message__title">
+        <h4>{{from}}</h4>
+        <span>{{createdAt}}</span>
+      </div>
+      <div class="message__body">
+        <p>{{text}}</p>
+      </div>
+    </dd>
+  </script>
+
+
+  <script id="location-messagelist-template" type="text/template">
+    <dd class="messages">
+      <div class="message__title">
+        <h4>{{from}}</h4>
+        <span>{{createdAt}}</span>
+      </div>
+      <div class="message__body">
+        <a href="{{url}}" target="_blank">My current location</a>
+      </div>
+    </dd>
+  </script>
+
+
 
   <script src="socket.io/socket.io.js"></script>
   <script src="/js/libs/jquery-3.2.1.min.js"></script>
+  <script src="/js/libs/mustache.js"></script>
   <script src="/js/index.js"></script>
 
 </body>
