Added room user update on left column

--- a/public/chat.html
+++ b/public/chat.html
@@ -10,7 +10,10 @@
 
 <body class="chat">
   <div class="chat__sidebar">
-    <h3>People</h3>
+    <h3>Chat Room:</h3>
+    <div id="roomname"></div>
+    <h3> </h3>
+    <h3>People:</h3>
     <div id="users"></div>
   </div>
 
